--- a/test-framework/.github/workflows/playwright-tests.yml
+++ b/test-framework/.github/workflows/playwright-tests.yml
@@ -25,5 +25,5 @@ jobs:
           retention-days: 30
     env:
       BASE_URL: ${{ secrets.BASE_URL }}
-      USERNAME: ${{ secrets.USERNAME }}
-      PASSWORD: ${{ secrets.PASSWORD }}
+      VALID_USERNAME: ${{ secrets.USERNAME }}
+      VALID_PASSWORD: ${{ secrets.PASSWORD }}
