--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,9 @@ jobs:
         if: always()
         with:
           name: playwright-report
-          path: playwright-report/
+          path: test-framework/playwright-report/
           retention-days: 30
     env:
       BASE_URL: ${{ secrets.BASE_URL }}
-      VALID_USERNAME: ${{ secrets.USERNAME }}
-      VALID_PASSWORD: ${{ secrets.PASSWORD }}
+      VALID_USERNAME: ${{ secrets.VALID_USERNAME }}
+      VALID_PASSWORD: ${{ secrets.VALID_PASSWORD }}
