--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,6 @@ jobs:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     environment: test
-    defaults:
-      run:
-        working-directory: test-framework
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -25,7 +22,7 @@ jobs:
         if: always()
         with:
           name: playwright-report
-          path: test-framework/playwright-report/
+          path: playwright-report/
           retention-days: 30
     env:
       BASE_URL: ${{ secrets.BASE_URL }}
